fixed error message bug - ready to submit (no stretch/SASS)

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,10 +3,15 @@
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
   display: flex;
   width: 65%;
-  height:50vh;
+  height:500px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-right: 5vw;
   min-width: 305px;
+  margin-top: 25px;
+}
+
+#hiddenNav {
+  display: none;
 }
