--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,5 +1,5 @@
 .tweetArticle {
-  height: 215px;
+  height: 260px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,7 +40,7 @@
   }
   
 
-  .username {
+  .hide {
     opacity: 0;
   }
   
@@ -51,16 +51,19 @@
     opacity: 1;    
   }
 
+  .tweetArticle:hover .hide {
+    opacity: 1;
+  }
+
   .tweetArticle:hover {
     box-shadow: #5e76c1 3px 4px 0 0;
   }
   
   .errorRed {
-    margin: 0 auto;
-    padding: 0 5px 0 5px;
-    height: 75px;
-    border: 2px solid darkred;
-    color: red;
+    display: flex;
+    padding: 10px;
+    border: solid 3px rgb(168, 0, 0);
+    color: rgb(168, 0, 0);
     font-weight: bold;
   }
 
